--- a/cssq2/css/style.css
+++ b/cssq2/css/style.css
@@ -31,30 +31,36 @@ header input {
   position: relative;
   float: left;
 }
-
+nav {
+  width: 15vw;
+}
 .headerSearch {
   background: white url('../images/search.png') right no-repeat;
   background-size: 16px;
   padding-right: 16px;
   float: right;
+  width: 100%;
 }
 .main {
   overflow: hidden;
 }
 .content {
-  padding-top: 4%;
+  padding-top: 3%;
   padding-left: 1%;
   float: left;
-  width: 73%;
+  width: 78%;
   background-color: #fff;
 }
 
 .sidebar {
-  padding-top: 4%;
-  margin-left: 75%;
-  width: 25%;
+  padding-top: 3%;
+  margin-left: 80%;
+  width: 19%;
   background-color: #aaa;
   position: fixed;
+}
+.sidebar h2{
+  margin-left: 1vw;
 }
 
 .content,
